<resources>
    <string name="app_name">LICET</string>
    <string name="aboutus">ABOUT US</string>
    <string name="details1">In Loyola, we look at education differently. For us, education does not lie in the quantification of knowledge. But it lies in the quality of knowledge that helps form the character of students. We Form them as Competent, Committed, Creative and Compassionate men and women for others. We believe in this philosophy. This is our passion. And this is the core of Jesuit Education. This is what has made Loyola climb to the top in the league of colleges in India.
   </string>
    <string name="details2">Ideals Of Jesuit Higher Education</string>
    <string name="comp">Department of Computer Science and Engineering</string>
    <string name="vision">Vision</string>
    <string name="visionpara">To form Engineers with an innovative bent of mind that caters to the ever-changing computing needs of the Industry and to serve the society at large.</string>
    <string name="mission">Mission Statement</string>
    <string name="missionpara">The Department of Computer Science and Engineering is committed to impart outstanding undergraduate education, provide state-of-the-art computing facilities, groom students for high quality research activities, and strengthen partnership with professional and technical societies.</string>
    <string name="prog">PROGRAMME EDUCATIONAL OBJECTIVES</string>
    <string name="progpara">The Computer Science and Engineering program prepares students to attain the following objectives
</string>
    <string name="text1">->Graduates will have successful careers in computer engineering fields or will be able to successfully pursue higher studies.
</string>
    <string name="text2">->Graduates will demonstrate problem-solving capability and design skills including the ability to identify and formulate problems and provide solutions by creatively applying computer engineering principles.
</string>
    <string name="text3">->Graduates will communicate effectively, work collaboratively and exhibit high levels of professionalism and ethical responsibility by considering the local and global impact of computing on individuals, organizations, and the society.
</string>
    <string name="text4">->Graduates will exercise professional responsibility, engage in life-long learning and professional development to adapt to the rapidly changing work environment.
</string>
    <string name="para1">The department of computer science and engineering offers an undergraduate programme with an intake of 60 students per year. It provides an in-depth education in engineering principles built on mathematics, computation, programming logics, and life skills. The department maintains an active interaction with the industries to provide an exposure to the students and to bridge the gap between the industry and academia. Our faculty, students, and staff have helped to develop and maintain software applications ranging from Performance Evaluation System, Google Apps for Education, Learning Management System (Moodle), Enterprise wide Content Management System and various other campus wide networking activities. The department organizes national level technical events and competitions like Oracle Technology Network (OTN) Yatra and Srinivasa Ramanujan Mathematical Competition (SRMC).
</string>
    <string name="para2">The Department has entered into an MoU with Tech Mahindra for software training and Faculty Development Programmes, besides R&amp;D activities.
</string>
    <string name="para3">The students of the Department have brought out quite number of innovative projects such as GPS in Traffic Management, Smart Cards, etc. The software team of the Department has made laudable contribution by developing software for campus management, attendance help line and on-line test. Many of the students are well placed in leading software companies such as Infosys, Tech Mahindra, SAP, Vernalis etc.</string>
    <string name="h1"> Department of Electronics and Communication Engineering </string>
    <string name="h2">Vision </string>
    <string name="h3">TO BECOME A GLOBALLY RECOGNISED INSTITUTION OF HIGHER LEARNING, CENTER OF PROVIDING QUALITY EDUCATION WITH SOCIAL RESPONSIBILITY EXPENDING ENRICHED KNOWLEDGE AND TECHNOLOGIES IN THE FIELD OF ELECTRONICS AND COMMUNICATION ENGINEERING</string>
    <string name="h4">MISSION</string>
    <string name="h5">TO PROVIDE QUALITY TECHNICAL EDUCATION THAT PRODUCES CREATIVE SOLUTIONS TO THE SOCIETY’S NEEDS, ADHERENT TO THE PROFESSIONAL ETHICS AND TO DISSEMINATE KNOWLEDGE AND TECHNOLOGIES ESSENTIAL TO NATIVE AND GLOBAL REQUIREMENTS IN THE FIELD OF ELECTRONICS AND COMMUNICATION ENGINEERING </string>
    <string name="h6">PROGRAMME EDUCATIONAL OBJECTIVES </string>
    <string name="h7">The Electronics and Communication Engineering program prepares students to attain the following objectives </string>
    <string name="h8">•    TO PROVIDE STUDENTS WITH COMPREHENSIVE FOUNDATION IN THE MATHEMATICAL, SCIENTIFIC AND ENGINEERING FUNDAMENTALS NECESSARY TO FORMULATE, ANALYZE AND SOLVE ENGINEERING PROBLEMS AND TO PREPARE THEM FOR POST GRADUATE STUDIES AND FOR SUCCESSFUL PROFESSIONALS. </string>
    <string name="h9">•    TO IMPROVE THE ABILITY AMONG STUDENTS TO DEFINE ENGINEERING PROBLEMS IN THE FIELDS OF ELECTRONICS AND COMMUNICATION ENGINEERING, AND TO EMPLOY NECESSARY TECHNIQUES, HARDWARE AND CAD TOOLS FOR CONTEMPORARY ENGINEERING APPLICATIONS. </string>
    <string name="h10">•TO IMPART THE VALUES, SKILLS, LEADERSHIP AND TEAM SPIRIT FOR COMPREHENSIVE PERSONALITY, TO PROMOTE ENTREPRENEURIAL INTEREST AMONG STUDENTS AND TO CREATE A ZEAL FOR USE OF ENGINEERINGSOLUTIONS FOR SOCIETAL PROBLEMS. </string>
    <string name="h11">GRADUATES OF ELECTRONICS AND COMMUNICATION ENGINEERING PROGRAMME WILL HAVE THE FOLLOWING OUTCOMES </string>
    <string name="h12">•HAVE STRONG BACKGROUND IN BASIC SCIENCE AND BASIC MATHEMATICS AND ABLE TO USE THESE TOOLS IN THEIR OWN ENGINEERING FIELD, </string>
    <string name="h13">•ABLE TO DESIGN AND CONDUCT EXPERIMENTS, AS WELL AS TO ANALYZE AND INTERPRET DATA </string>
    <string name="h14">•ABLE TO IDENTIFY AND DEFINE ENGINEERING PROBLEMS IN THE FIELDS OF ELECTRONICS AND COMMUNICATION ENGINEERING </string>
    <string name="h15">•ABLE TO EMPLOY NECESSARY TECHNIQUES, HARDWARE, AND COMMUNICATION TOOLS FOR MODERN ENGINEERING APPLICATIONS </string>
    <string name="h16">•ABLE TO SOLVE PROBLEMS THROUGH ANALYTICAL THINKING IN THEIR OWN OR RELATED FIELDS </string>
    <string name="h17">•ABLE TO WORK IN A MULTI-DISCIPLINARY ENVIRONMENT </string>
    <string name="h18">•ABLE TO FOLLOW AND CONTRIBUTE TO THE DEVELOPMENTS IN THEIR OWN FIELD RECOGNIZING THE SIGNIFICANCE OF LIFELONG LEARNING </string>
    <string name="h19">•ABLE TO COMMUNICATE EFFECTIVELY </string>
    <string name="h20">•HAVE STRONG ETHICAL AND PROFESSIONAL RESPONSIBILITY AND ADHERING TO QUALITY </string>
    <string name="h21">•ABLE TO TAKE INDIVIDUAL RESPONSIBILITY AND TO WORK AS A PART OF A TEAM </string>
    <string name="it1">Department of Information Technology</string>
    <string name="it2">About the department</string>
    <string name="it3">Every moment we experience Information Technology around us in one or other form. Department was started in the year 2010 with B. Tech. IT program with a sanctioned intake of 60 students. The Department has over 13 faculty members with 2 PhD holders and 2 faculty who are pursuing their PhD. The Department offers a programme that combines classroom and laboratory learning in technical areas with liberal arts and cooperative work assignments. This creates a practical program, balanced between foundation studies in the engineering science and applications in the real world of work. </string>
    <string name="it4">The students are provided with all facilities and guidance to carry out their project work in the department. Intensive laboratory assignments are given to significant experience with the state – of –the –art facilities and design tools.</string>
    <string name="it5">The Department emphasizes on Domain Specific Applications such as – Networks, Information Security, Software Engineering, Operating Systems, Database Management Systems, Image Processing, Cloud Computing etc. to facilitate the students in acquiring higher degree of knowledge, global competency and excellence, for the betterment of the society.</string>
    <string name="depteee">Department of Electrical and Electronics Engineering

</string>
    <string name="visione1">Vision</string>
    <string name="visionepara">As Electrical energy is a cornerstone of our quality of life, our department vision is to mould young men and women as excellent electrical engineers with the knowledge, skills, and character to undauntedly serve the people of our nation.
</string>
    <string name="missione">Mission</string>
    <string name="missionepara">Ensure an enabling educational experience through industrial exposure and integration of theory with application engineering. Provide cutting-edge innovative ideas with close collaboration with industry, society, as well as other leading institutions.
</string>
    <string name="prog1">PROGRAMME EDUCATIONAL OBJECTIVES</string>
    <string name="progpara1">->To prepare the students have successful career in industry, research areas and motivate for higher Education and to provide an opportunity to work in inter disciplinary groups and to become future entrepreneurs.
</string>
    <string name="progpara2">->To provide strong foundation in basic science, mathematics, circuit theory, field theory, control theory and signal processing concepts to formulate, solve and analyze electrical and electronics problems.
</string>
    <string name="progpara3">->To provide good knowledge of power electronics, Electrical power apparatus and their applications in power systems.
</string>
    <string name="progpara4">->To provide necessary foundation on computational platforms and software applications related to the respective field of engineering.
</string>
    <string name="progpara5">->To promote student awareness for lifelong learning and inculcate professional ethics and to instill social responsibility among the students to work in teams for the welfare of the society and fellow countrymen.
</string>
    <string name="prog2">PROGRAMME OUTCOMES:</string>
    <string name="progepara1">->Ability to understand and apply differential equations, integrals, matrix theory, probability theory and Laplace, Fourier and Z transformations for engineering problems.
</string>
    <string name="progepara2">->Ability to understand and apply basic science, circuit theory, Electro-magnetic field theory control theory, linear and digital electronic circuits and apply them to electrical engineering problems.
</string>
    <string name="progepara3">->Ability to model and analyze electrical apparatus, power electronics and their application to power system for stability, control and protection and to handle the engineering aspects of electrical energy generation and utilization.
</string>
    <string name="progepara4">->Ability to review, prepare and present technological developments and to form a group and develop or solve engineering hardware and problems.
</string>
    <string name="progepara5">->To understand and apply computing platform and software for engineering problems.
</string>
    <string name="progepara6">->To understand ethical issues, environmental impact and acquire management skills.</string>
</resources>