<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user_pc.licet.ECE">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/e1"
            android:layout_width="wrap_content"
            android:layout_height="86dp"
            android:text="@string/h1"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/e2"
            android:layout_width="346dp"
            android:layout_height="53dp"
            android:text="@string/h2"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/e3"
            android:layout_width="wrap_content"
            android:layout_height="152dp"
            android:text="@string/h3"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/e4"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/h4"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/e5"
            android:layout_width="wrap_content"
            android:layout_height="230dp"
            android:text="@string/h5"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/ece10"
            android:layout_width="380dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ece100"
            />
        <TextView
            android:id="@+id/e6"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="@string/h6"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/e7"
            android:layout_width="wrap_content"
            android:layout_height="112dp"
            android:text="@string/h7"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/e8"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:text="@string/h8"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/e9"
            android:layout_width="wrap_content"
            android:layout_height="173dp"
            android:text="@string/h9"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/e10"
            android:layout_width="wrap_content"
            android:layout_height="208dp"
            android:text="@string/h10"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/e11"
            android:layout_width="wrap_content"
            android:layout_height="166dp"
            android:text="@string/h11"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/e12"
            android:layout_width="wrap_content"
            android:layout_height="782dp"
            android:text="@string/h12"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/e13"
            android:layout_width="wrap_content"
            android:layout_height="166dp"
            android:text="@string/h13"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/e14"
            android:layout_width="wrap_content"
            android:layout_height="166dp"
            android:text="@string/h14"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/e15"
            android:layout_width="wrap_content"
            android:layout_height="166dp"
            android:text="@string/h15"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/e16"
            android:layout_width="wrap_content"
            android:layout_height="166dp"
            android:text="@string/h16"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/e17"
            android:layout_width="wrap_content"
            android:layout_height="166dp"
            android:text="@string/h17"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/e18"
            android:layout_width="wrap_content"
            android:layout_height="166dp"
            android:text="@string/h18"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/e19"
            android:layout_width="wrap_content"
            android:layout_height="166dp"
            android:text="@string/h19"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/e20"
            android:layout_width="wrap_content"
            android:layout_height="166dp"
            android:text="@string/h20"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/e21"
            android:layout_width="wrap_content"
            android:layout_height="166dp"
            android:text="@string/h21"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
