<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.user_pc.licet.MainActivity13"
        android:orientation="vertical">
        <TextView
            android:id="@+id/deptcse"
            android:layout_width="wrap_content"
            android:layout_height="86dp"
            android:text="@string/comp"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/vision"
            android:layout_width="346dp"
            android:layout_height="53dp"
            android:text="@string/vision"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/visionpara"
            android:layout_width="wrap_content"
            android:layout_height="152dp"
            android:text="@string/visionpara"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mission"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/mission"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/missionpara"
            android:layout_width="wrap_content"
            android:layout_height="230dp"
            android:text="@string/missionpara"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image_sample"
            android:layout_width="380dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/cse"
            />
        <TextView
            android:id="@+id/prog"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="@string/prog"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/progpara"
            android:layout_width="wrap_content"
            android:layout_height="112dp"
            android:text="@string/progpara"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:text="@string/text1"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="173dp"
            android:text="@string/text2"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="208dp"
            android:text="@string/text3"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="166dp"
            android:text="@string/text4"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/para1"
            android:layout_width="wrap_content"
            android:layout_height="782dp"
            android:text="@string/para1"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/para2"
            android:layout_width="wrap_content"
            android:layout_height="166dp"
            android:text="@string/para2"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/para3"
            android:layout_width="wrap_content"
            android:layout_height="351dp"
            android:text="@string/para3"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>