<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.user_pc.licet.MainActivity10">

        <TextView
            android:id="@+id/depteee"
            android:layout_width="wrap_content"
            android:layout_height="79dp"
            android:text="@string/depteee"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/visioneee1"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/visione1"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/visioneeepara"
            android:layout_width="wrap_content"
            android:layout_height="204dp"
            android:text="@string/visionepara"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/missioneee"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:text="@string/missione"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/missioneeepara"
            android:layout_width="wrap_content"
            android:layout_height="228dp"
            android:text="@string/missionepara"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/eeeimg"
            android:layout_width="382dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/eeeimg" />


        <TextView
            android:id="@+id/prog1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:paddingBottom="20dp"
            android:text="@string/prog1"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/progpara1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.22"
            android:paddingBottom="20dp"
            android:text="@string/progpara1"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/progpara2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.16"
            android:paddingBottom="20dp"
            android:text="@string/progpara2"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/progpara3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/progpara3"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/progpara4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/progpara4"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/progpara5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/progpara5"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/prog2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/prog2"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/progepara1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/progepara1"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/progepara2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/progepara2"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/progepara3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/progepara3"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/progepara4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/progepara4"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/progepara5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/progepara5"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/progepara6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/progepara6"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>

